// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish-document should handle publishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested document could not be found","status":404,"operationStatus":"ContentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`publish-document should publish a valid document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
